Migrate CI to CMake and remove Makefile and any related environments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,10 +35,10 @@ jobs:
       fail-fast: false
       matrix:
         python: ["3.10"]
-        root: ["6.26.4"]  
+        root: ["6.26.4"]
         include:
           - python: "3.10"
-            root: "6.32.2"  
+            root: "6.32.2"
           - python: "3.12"
             root: "6.34.4"
 
@@ -50,30 +50,62 @@ jobs:
       with:
         path: HiggsAnalysis/CombinedLimit # Required to match compile instructions
     - name: Set up Conda
-      uses: conda-incubator/setup-miniconda@v2.2.0
+      uses: conda-incubator/setup-miniconda@v3
       with:
-        python-version: ${{ matrix.python }}
-        miniforge-variant: Miniforge3
-        channels: conda-forge,defaults
-        channel-priority: true
-        activate-environment: combine
+        python-version: 3.12
+        miniforge-version: latest
     - name: Install build environment
       shell: bash -l {0}
       run: |
-        EXTRA_PACKAGES=""
-        if [[ "${{ matrix.root }}" == "6.26.4" && "${{ matrix.python }}" == "3.10" ]]; then
-          EXTRA_PACKAGES="libxml2==2.13.8"
-        fi
-        mamba install -c conda-forge python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp pcre eigen ${EXTRA_PACKAGES}
-        cd HiggsAnalysis/CombinedLimit
-        bash set_conda_env_vars.sh
+        # Install dependencies (synchronize with cms-combine-feedstock recipe.yaml)
+        mamba install -c conda-forge cmake python==${{ matrix.python }} pandas gsl root_base==${{ matrix.root }} libboost-devel eigen vdt
     - name: Build
       shell: bash -l {0}
       run: |
-        cd HiggsAnalysis/CombinedLimit
-        make CONDA=1 -j 2
+        Python_SITELIB=$(python3 -c "import sysconfig;p=sysconfig.get_path('purelib');print(p)")
+        cmake -S HiggsAnalysis/CombinedLimit -B build -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX -DPython_SITELIB=$Python_SITELIB
+        cmake --build build --clean-first --parallel="${CPU_COUNT}"
+        cmake --install build  # Install to conda prefix (unsafe but ok for CI)
     - name: Run tests
-      if: startsWith(matrix.python, '3.')
+      shell: bash -l {0}
+      run: |
+        cd HiggsAnalysis/CombinedLimit/test
+        python test_interference.py
+
+  legacy-build:
+    strategy:
+      matrix:
+        python: ["3.8"]
+        root: ["6.22"]
+        include:
+          # python 3.10 root 6.26
+          - python: "3.10"
+            root: "6.26.4"
+
+    runs-on: ubuntu-latest
+    name: Legacy compile (py${{ matrix.python }}, root${{ matrix.root }})
+
+    steps:
+    - uses: actions/checkout@master
+      with:
+        path: HiggsAnalysis/CombinedLimit # Required to match compile instructions
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        python-version: 3.12
+        miniforge-version: latest
+    - name: Install build environment
+      shell: bash -l {0}
+      run: |
+        mamba install -c conda-forge cmake python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp boost pcre eigen
+    - name: Build
+      shell: bash -l {0}
+      run: |
+        Python_SITELIB=$(python3 -c "import sysconfig;p=sysconfig.get_path('purelib');print(p)")
+        cmake -S HiggsAnalysis/CombinedLimit -B build -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX -DPython_SITELIB=$Python_SITELIB -DCMAKE_PREFIX_PATH=$CONDA_PREFIX
+        cmake --build build --clean-first --parallel="${CPU_COUNT}"
+        cmake --install build  # Install to conda prefix (unsafe but ok for CI)
+    - name: Run tests
       shell: bash -l {0}
       run: |
         cd HiggsAnalysis/CombinedLimit/test
