--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,15 +27,8 @@ jobs:
   build:
     strategy:
       matrix:
-        python: ["3.8"]
-        root: ["6.22"]  
-        include:
-          # python 3.10 root 6.26
-          - python: "3.10"
-            root: "6.26.4"
-          # python 3.10 root 6.32
-          - python: "3.10"
-            root: "6.32"
+        python: ["3.10"]
+        root: ["6.32", "6.34"]
 
     runs-on: ubuntu-latest
     name: Compile (py${{ matrix.python }}, root${{ matrix.root }})
@@ -53,11 +46,49 @@ jobs:
       shell: bash -l {0}
       run: |
         # Install dependencies (synchronize with cms-combine-feedstock recipe.yaml)
-        mamba install -c conda-forge python==${{ matrix.python }} pandas six gsl root_base==${{ matrix.root }} libboost-devel eigen vdt
+        mamba install -c conda-forge cmake python==${{ matrix.python }} pandas six gsl root_base==${{ matrix.root }} libboost-devel eigen vdt
     - name: Build
       shell: bash -l {0}
       run: |
-        cmake -S HiggsAnalysis/CombinedLimit -B build -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX -DUSE_CXX17=ON
+        cmake -S HiggsAnalysis/CombinedLimit -B build -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
+        cmake --build build --clean-first --parallel="${CPU_COUNT}"
+        cmake --install build  # Install to conda prefix (unsafe but ok for CI)
+    - name: Run tests
+      shell: bash -l {0}
+      run: |
+        cd HiggsAnalysis/CombinedLimit/test
+        python test_interference.py
+
+  legacy-build:
+    strategy:
+      matrix:
+        python: ["3.8"]
+        root: ["6.22"]  
+        include:
+          # python 3.10 root 6.26
+          - python: "3.10"
+            root: "6.26.4"
+
+    runs-on: ubuntu-latest
+    name: Compile (py${{ matrix.python }}, root${{ matrix.root }})
+
+    steps:
+    - uses: actions/checkout@master
+      with:
+        path: HiggsAnalysis/CombinedLimit # Required to match compile instructions
+    - name: Set up Conda
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        python-version: 3.12
+        miniforge-version: latest
+    - name: Install build environment
+      shell: bash -l {0}
+      run: |
+        mamba install -c conda-forge python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp boost pcre eigen
+    - name: Build
+      shell: bash -l {0}
+      run: |
+        cmake -S HiggsAnalysis/CombinedLimit -B build -DCMAKE_INSTALL_PREFIX=$CONDA_PREFIX
         cmake --build build --clean-first --parallel="${CPU_COUNT}"
         cmake --install build  # Install to conda prefix (unsafe but ok for CI)
     - name: Run tests
