--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python: ["3.10"]
+        python: ["3.12"]
         root: ["6.32", "6.34"]
 
     runs-on: ubuntu-latest
@@ -84,7 +84,7 @@ jobs:
     - name: Install build environment
       shell: bash -l {0}
       run: |
-        mamba install -c conda-forge python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp boost pcre eigen
+        mamba install -c conda-forge cmake python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp boost pcre eigen
     - name: Build
       shell: bash -l {0}
       run: |
