update to miniforge, add 6.34.4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,9 +36,10 @@ jobs:
           # python 3.10 root 6.26
           - python: "3.10"
             root: "6.26.4"
-          # python 3.10 root 6.32 (not available yet)
           - python: "3.10"
-            root: "6.32.2" # version 6.30.07 where the conflicting classes were removed from root is not available, so compiling with 6.32.2 where this issue is resolved
+            root: "6.32.2"  
+          - python: "3.12"
+            root: "6.34.4"
 
     runs-on: ubuntu-latest
     name: Compile (py${{ matrix.python }}, root${{ matrix.root }})
@@ -51,7 +52,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2.2.0
       with:
         python-version: ${{ matrix.python }}
-        miniforge-variant: Mambaforge
+        miniforge-variant: Miniforge3
         channels: conda-forge,defaults
         channel-priority: true
         activate-environment: combine
