--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -96,8 +96,8 @@ jobs:
             source /cvmfs/cms.cern.ch/cmsset_default.sh
             cmsenv
             text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
-            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 -n .without_nllbackend &> without_nllbackend.out 
-            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 --nllbackend codegen -n .with_nllbackend &> with_nllbackend.out
+            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 -n .without_nllbackend 2>&1 without_nllbackend.out 
+            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 --nllbackend codegen -n .with_nllbackend 2>&1 with_nllbackend.out
             # Remove the last line with the timing information, which is always different
             head -n -1 without_nllbackend.out > without_nllbackend_trimmed.out
             head -n -1 with_nllbackend.out > with_nllbackend_trimmed.out
@@ -116,6 +116,53 @@ jobs:
             el
                 echo "All good!"
             fi
+      - uses: rhaschke/docker-run-action@v5
+        name: Counting datacard ROOT fit comparison with and without nllbackend codegen option
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{env.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
+            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 -n .without_nllbackend 
+            combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 --nllbackend codegen -n .with_nllbackend
+
+            # Define the ROOT files
+            ROOT_FILE_without_nllbackend="higgsCombineTest.without_nllbackend.MultiDimFit.mH120.root"
+            ROOT_FILE_with_nllbackend="higgsCombineTest.with_nllbackend.MultiDimFit.mH120.root"
+
+            # Check if the file exists
+            if [ ! -f "$ROOT_FILE_without_nllbackend" ] || [ ! -f "$ROOT_FILE_with_nllbackend" ]; then
+                echo "Error: ROOT files not found!"
+                exit 1
+            fi
+            
+            # Run ROOT in batch mode and scan the 'r' branch
+            echo "Scanning branch 'r' from $ROOT_FILE_without_nllbackend..."
+            ROOT_OUTPUT1=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
+            TFile *f = TFile::Open("$ROOT_FILE_without_nllbackend");
+            TTree *t = (TTree*) f->Get("limit");
+            t->Scan("r");
+            EOF
+
+            echo "Scanning branch 'r' from $ROOT_FILE_with_nllbackend..."
+            ROOT_OUTPUT2=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
+            TFile *f = TFile::Open("$ROOT_FILE_with_nllbackend");
+            TTree *t = (TTree*) f->Get("limit");
+            t->Scan("r");
+            EOF
+
+            # Compare the outputs
+            if [ "$ROOT_OUTPUT1" == "$ROOT_OUTPUT2" ]; then
+                echo "nllbackend test successful"
+            else
+                echo "nllbackend test unsuccessful"
+            fi
+
 
       - uses: rhaschke/docker-run-action@v5
         name: Countind datacard Fixed Point from csv
