--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -101,14 +101,11 @@ jobs:
             # Remove the last line with the timing information, which is always different
             head -n -1 without_nllbackend.out > without_nllbackend_trimmed.out
             head -n -1 with_nllbackend.out > with_nllbackend_trimmed.out
-            
             # Remove the warning about the different backend
             echo "WARNING! You set the NLL evaluation backend to \"codegen\", which is not the default. This code path is not validated. Please don't use it for production!" > forbidden.txt
             grep -v -x -F -f forbidden.txt with_nllbackend_trimmed.out > with_nllbackend_trimmed_no_warning.out
-            
             # The remaining diff should be empty
-            DIFF=$(diff without_nllbackend.out with_nllbackend_trimmed_no_warning.ou)
-            
+            DIFF=$(diff without_nllbackend_trimmed.out with_nllbackend_trimmed_no_warning.out)
             if [ "$DIFF" != "" ]
             then
                 echo "There was a diff, test should fail:"
@@ -130,15 +127,12 @@ jobs:
             text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
             combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 -n .without_nllbackend 
             combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 --nllbackend codegen -n .with_nllbackend
-
             ROOT_FILE_without_nllbackend="higgsCombineTest.without_nllbackend.MultiDimFit.mH120.root"
             ROOT_FILE_with_nllbackend="higgsCombineTest.with_nllbackend.MultiDimFit.mH120.root"
-            
             if [ ! -f "$ROOT_FILE_without_nllbackend" ] || [ ! -f "$ROOT_FILE_with_nllbackend" ]; then
                 echo "Error: ROOT files not found!"
                 exit 1
             fi
-            
             echo "Scanning branch 'r' from $ROOT_FILE_without_nllbackend..."
             ROOT_OUTPUT1=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
             TFile *f = TFile::Open("$ROOT_FILE_without_nllbackend");
@@ -146,7 +140,6 @@ jobs:
             t->Scan("r");
             EOF
             );
-
             echo "Scanning branch 'r' from $ROOT_FILE_with_nllbackend..."
             ROOT_OUTPUT2=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
             TFile *f = TFile::Open("$ROOT_FILE_with_nllbackend");
@@ -154,13 +147,11 @@ jobs:
             t->Scan("r");
             EOF
             );
-
             if [ "$ROOT_OUTPUT1" == "$ROOT_OUTPUT2" ]; then
                 echo "nllbackend test successful"
             else
                 echo "nllbackend test unsuccessful"
             fi
-
       - uses: rhaschke/docker-run-action@v5
         name: Countind datacard Fixed Point from csv
         with:
