--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -83,7 +83,7 @@ jobs:
             cmsenv
             text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
             combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root  --setParameterRanges r=-1,1 --nllbackend codegen
-
+c
       - uses: rhaschke/docker-run-action@v5
         name: Counting datacard comparison with and without nllbackend codegen option
         with:
@@ -102,7 +102,7 @@ jobs:
             head -n -1 without_nllbackend.out > without_nllbackend_trimmed.out
             head -n -1 with_nllbackend.out > with_nllbackend_trimmed.out
             # Remove the warning about the different backend
-            echo "WARNING! You set the NLL evaluation backend to \"codegen\", which is not the default. This code path is not validated. Please don't use it for production!" > forbidden.txt
+            echo "WARNING! You set the NLL evaluation backend to codegen, which is not the default. This code path is not validated. Please don't use it for production!" > forbidden.txt
             grep -v -x -F -f forbidden.txt with_nllbackend_trimmed.out > with_nllbackend_trimmed_no_warning.out
             # The remaining diff should be empty
             DIFF=$(diff without_nllbackend_trimmed.out with_nllbackend_trimmed_no_warning.out)
@@ -136,18 +136,18 @@ jobs:
             fi
             echo "Scanning branch 'r' from $ROOT_FILE_without_nllbackend..."
             ROOT_OUTPUT1=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
-            TFile *f = TFile::Open("$ROOT_FILE_without_nllbackend");
-            TTree *t = (TTree*) f->Get("limit");
-            t->Scan("r_ggH");
+            TFile *f = TFile::Open("$ROOT_FILE_without_nllbackend")
+            TTree *t = (TTree*) f->Get("limit")
+            t->Scan("r_ggH")
             EOF
-            );
+            )
             echo "Scanning branch 'r' from $ROOT_FILE_with_nllbackend..."
             ROOT_OUTPUT2=$(root -l -b -q <<EOF | grep -E "^[[:space:]]*[0-9]+[:space:]+"
-            TFile *f = TFile::Open("$ROOT_FILE_with_nllbackend");
-            TTree *t = (TTree*) f->Get("limit");
-            t->Scan("r_ggH");
+            TFile *f = TFile::Open("$ROOT_FILE_with_nllbackend")
+            TTree *t = (TTree*) f->Get("limit")
+            t->Scan("r_ggH")
             EOF
-            );
+            )
             if [ "$ROOT_OUTPUT1" == "$ROOT_OUTPUT2" ]
             then
                 echo "nllbackend test successful"
