--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,11 @@ name: CI/CD
 on:
   workflow_dispatch:
   pull_request:
+    paths:
+      - '**.h'
+      - '**.cc'
+      - '**.cxx'
+      - '**.py'
   push:
     branches:
       - main
