Migrate Roofit basics tutorial to pyroot
Note: the notebook is converted manually to markdown because doing it
automatically would have been too error-prone.
The command is

jupyter nbconvert --to markdown --execute data/tutorials/roofit/roofit_basics.ipynb --output-dir docs/part5

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
           - "Validating datacards":       part3/validation.md
           - "Debugging fit failures":     part3/debugging.md
         - Tutorials:
-          - "RooFit Basics":              part5/roofit.md
+          - "RooFit Basics":              part5/roofit_basics.md
           - "Main Features":
             - "Exercises":                part5/longexercise.md
             - "Solutions":                part5/longexerciseanswers.md
