--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,13 @@ jobs:
     strategy:
       matrix:
         python: ["3.8"]
-        root: ["6.22"]  
+        root: ["6.22"]
         include:
           # python 3.10 root 6.26
           - python: "3.10"
             root: "6.26.4"
           - python: "3.10"
-            root: "6.32.2"  
+            root: "6.32.2"
           - python: "3.12"
             root: "6.34.4"
 
@@ -62,7 +62,7 @@ jobs:
     - name: Install build environment
       shell: bash -l {0}
       run: |
-        mamba install -c conda-forge python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp pcre eigen
+        conda install -c conda-forge python==${{ matrix.python }} pip pandas root==${{ matrix.root }} gsl tbb vdt boost-cpp pcre eigen
         cd HiggsAnalysis/CombinedLimit
         bash set_conda_env_vars.sh
     - name: Build
