--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,7 @@ nav:
           - "Per-bin Transfer Factors with Parametric Histograms": abcd_rooparametrichist_tutorial/rooparametrichist_exercise.md
         - "In-browser tools":
           - "jsROOT":                     https://root.cern/js/latest/
-          - "Daracard Viewer":            in_browser_tools/view_datacard.html
+          - "Datacard Viewer":            in_browser_tools/view_datacard.html
           - "Covariance Viewer":          in_browser_tools/view_cov_json.html
         - Links & FAQ: part4/usefullinks.md
 
