docs: add in-browser tools (#1122)
* docs: add in-browser tools

* datacard viewer: fix rate param display

* datacard viewer: fix broken HTML tags

* datacard viewer: add systematics groups support

* datacard viewer: add extArg & nuisance edit  support

* in-browser tools: apply fixes suggested by coderabbitai

* in-browser viewers: added file select button

* covariance viewer: added brief JSON layout info

* in-browser tools: fixed menu & added introduction page

* in-browser tools: better links for opening

* in-browser tools: fix typos

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,11 @@ nav:
           - "Statitiscal Tests Basics": tutorial_stat_routines/stat_routines.md
           - "Model building": model_building_tutorial2024/model_building_exercise.md
           - "Per-bin Transfer Factors with Parametric Histograms": abcd_rooparametrichist_tutorial/rooparametrichist_exercise.md
+        - "In-Browser Tools":
+          - "In-Browser Tools":           part6/in_browser_tools.md
+          - "open: jsROOT (external)":     https://root.cern/js/latest/
+          - "open: Datacard Viewer":       part6/view_datacard.html
+          - "open: Covariance Viewer":     part6/view_cov_json.html
         - Links & FAQ: part4/usefullinks.md
 
 theme:
