Update Python command to use python3

--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -234,4 +234,4 @@ jobs:
             source /cvmfs/cms.cern.ch/cmsset_default.sh
             cmsenv
             cd HiggsAnalysis/CombinedLimit/test
-            python test_interference.py
+            python3 test_interference.py
